Welcome to the Kaguya ChangeLog.


Changelog:

Version 1.25

- If a user runs out of "$n bomb" uses for the hour, it will now display this in the console.
- Whenever a shard is connected, it will now be announced in a kaguya support text channel.


Version 1.24

- $repauthor no longer embeds with a red color on a successful use. (It's now pink)
- Custom command prefixes are no longer case sensitive.
- When a user successfully redeems a supporter tag, they are now DM'd and Stage is sent a notification through DM as well.
- When a new game of tic tac toe is started, the blank play area is now shown.
- Fixed a bug with the anti-raid service where it would unexpectedly punish users.
- Fixed a bug that prevented users who successfully used $voteclaim from having their $n bomb cooldown reset.
- When a user's Kaguya supporter tag expires, their role is removed and the user is DM'd.

Version 1.23

- $antiraid command added. Features an interactive setup for a very powerful anti-raid service.
- $antiraidoff command added.
- $massban command largely improved. Now, instead of breaking the ban cycle when it runs into an error, it will continue.
    - Errors include things like deleted accounts or if Kaguya's role is not at the top of the hierarchy.
    - Made the same types of improvements to $masskick
- Users may no longer earn EXP in blacklisted servers.
- Massblacklist no longer requires the bot owner to also have administrator when using it.
- Totally fixed $massblacklist. Now takes in a list of IDs instead of a list of guild users.
    - This means blacklists don't have to be of people that are in the same server you execute the command from.
- Unused $antiraid (owner only) command removed.
- If the music player has finished playing, with no more songs in the queue, it will now automatically disconnect. (Same for music errors.)
- $autoassign [aa] command added.
- $autoassignremove [aar] command added.
- $autoassignclear [aac] command added.