@@ -1,17 +1,17 @@
-﻿using Discord.Commands;
-using Discord.WebSocket;
-using System;
-using System.Threading.Tasks;
+﻿//using Discord.Commands;
+//using Discord.WebSocket;
+//using System;
+//using System.Threading.Tasks;
 
-#pragma warning disable
+//#pragma warning disable
 
-namespace Kaguya.Core.Attributes
-{
-    public class KaguyaCommandAttribute : PreconditionAttribute
-    {
-        public override async Task<PreconditionResult> CheckPermissionsAsync(ICommandContext context, CommandInfo command, IServiceProvider services)
-        {
-            var account = UserAccounts.UserAccounts.GetAccount(context.User.Id);
-        }
-    }
-}
+//namespace Kaguya.Core.Attributes
+//{
+//    public class KaguyaCommandAttribute : PreconditionAttribute
+//    {
+//        public override async Task<PreconditionResult> CheckPermissionsAsync(ICommandContext context, CommandInfo command, IServiceProvider services)
+//        {
+
+//        }
+//    }
+//}
