@@ -8,20 +8,20 @@ namespace Kaguya.Core.Server_Files
     {
         public ulong ID { get; set; }
         public string ServerName { get; set; }
-        public List<string> LastThousandMessages { get; set; }
+        public List<string> LastFiveHundredMessages { get; set; }
         public ServerMessageLog(ulong id)
         {
             ID = id;
             ServerName = "";
-            LastThousandMessages = new List<string>();
+            LastFiveHundredMessages = new List<string>();
         }
 
         public void AddMessage(SocketUserMessage msg)
         {
-            LastThousandMessages.Add($"#{LastThousandMessages.Count} ℀ Author: {msg.Author} ℀ Channel: #{msg.Channel} ℀ Message: {msg.Content} ℀ MsgID: {msg.Id} ℀ Time: {DateTime.Now}");
-            if(LastThousandMessages.Count >= 500)
+            LastFiveHundredMessages.Add($"#{LastFiveHundredMessages.Count} ℀ Author: {msg.Author} ℀ Channel: #{msg.Channel} ℀ Message: {msg.Content} ℀ MsgID: {msg.Id} ℀ Time: {DateTime.Now}");
+            if(LastFiveHundredMessages.Count >= 500)
             {
-                LastThousandMessages.RemoveAt(0);
+                LastFiveHundredMessages.RemoveAt(0);
             }
         }
     }
