@@ -2,6 +2,7 @@
 using Discord.Addons.Interactive;
 using Discord.Commands;
 using Discord.WebSocket;
+using Kaguya.Core;
 using Kaguya.Core.Command_Handler;
 using Kaguya.Core.CommandHandler;
 using Kaguya.Core.Embed;
@@ -111,7 +112,7 @@ namespace Kaguya
         {
             ulong.TryParse(Config.bot.BotUserID, out ulong ID);
             var mutualGuilds = Global.client.GetUser(ID).MutualGuilds;
-            var announceChannel = Global.client.GetGuild(546880579057221644).GetChannel(582401241011716115);
+            var announceChannel = Global.client.GetGuild(546880579057221644).GetChannel(546880579552018433);
 
             int memberCount = 0;
             int textChannelCount = 0;
@@ -150,7 +151,18 @@ namespace Kaguya
                 embed.WithTitle("Kaguya Shard Advisory");
                 embed.WithDescription($"Kaguya Shard {shard.ShardId} logged in. " +
                     $"Servicing {mutualGuilds.Count} guilds and {memberCount} members.");
-                (announceChannel as SocketTextChannel).SendMessageAsync(embed: embed.Build());
+                if(Config.bot.BotUserID == "538910393918160916") //This is so the dev bot won't announce when debugging.
+                {
+                    try
+                    {
+                        (announceChannel as SocketTextChannel).SendMessageAsync(embed: embed.Build());
+                    }
+                    catch (Exception e)
+                    {
+                        Logger logger = new Logger();
+                        logger.ConsoleCriticalAdvisory($"Failed to announce shard status in chat: {e.Message}");
+                    }
+                }
             }
 
             Console.WriteLine("\nShards Logged In: " + Global.ShardsLoggedIn);
